优化docs展示网页

--- a/docfiles/tocheader.html
+++ b/docfiles/tocheader.html
@@ -3,10 +3,10 @@
         @sidebarToggle@
         <div class="item" role="menuitem">
             <div class="header-org-logo">
-                <img src="/static/logo/Microsoft_logo_rgb_W-white_D.png" alt="Microsoft">
+                <img src="/docs/static/hilab-logo-left-top.png" alt="HiLab">
             </div>
             <div class="header-org-logo-sm">
-                <img src="/static/logo/Microsoft_logo_rgb_W-white_D-square.png" alt="Microsoft">
+                <img src="/docs/static/logo.png" alt="HiLab">
             </div>
             <div class="header-title"><span>@orgtitle@</span></div>
         </div>
