嵌入式网页的页脚修改

--- a/webapp/public/codeembed.html
+++ b/webapp/public/codeembed.html
@@ -37,9 +37,7 @@
 <body>
     <div id="blocks"></div>
     <footer class="ui horizontal small divided link list footer">
-        <a target="_blank" class="item" href="https://makecode.com">Microsoft MakeCode</a>
-        <a target="_blank" class="item" href="https://makecode.com/termsofuse">Terms of Use </a>
-        <a target="_blank" class="item" href="https://makecode.com/privacy">Privacy </a>
+        <a target="_blank" class="item" href="http://www.ihilab.com">HTZN HiLab</a>                
     </footer>
     <script id="loader">
         // This line gets patched up by the cloud
