--- a/docfiles/macros.html
+++ b/docfiles/macros.html
@@ -15,8 +15,8 @@
 <aside id=youtube>
     <div class="ui grid">
         <div class="ten wide column">
-            <div class="ui embed mdvid" data-source="youtube" data-id="@ARGS@"
-                data-placeholder="https://img.youtube.com/vi/@ARGS@/0.jpg">
+            <div class="ui embed">
+                <iframe src="//player.bilibili.com/player.html?bvid=@ARGS@&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>  
             </div>
         </div>
     </div>
