update for new version

--- a/docfiles/macros.html
+++ b/docfiles/macros.html
@@ -16,7 +16,17 @@
     <div class="ui grid">
         <div class="ten wide column">
             <div class="ui embed">
-                <iframe src="//player.bilibili.com/player.html?bvid=@ARGS@&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>  
+                <iframe src="//player.bilibili.com/player.html?bvid=@ARGS@&autoplay=0" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>                
+            </div>
+        </div>
+    </div>
+</aside>
+
+<aside id=vodqcloud>
+    <div class="ui grid">
+        <div class="sixteen wide column">
+            <div class="ui embed">
+                <iframe src="//@ARGS@" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>                
             </div>
         </div>
     </div>
@@ -190,3 +200,8 @@
         </div>
     </div>
 </aside>
+
+
+<link href="https://web.sdk.qcloud.com/player/tcplayer/release/v5.1.0/tcplayer.min.css" rel="stylesheet"/>
+<!--播放器脚本文件-->
+ <script src="https://web.sdk.qcloud.com/player/tcplayer/release/v5.1.0/tcplayer.v5.1.0.min.js"></script>
